<resources>
    <string name="app_name">Bulletin Board</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="all">ALL</string>
    <string name="add_new_product">add new product</string>
    <string name="car">CAR</string>
    <string name="good_header">Header</string>
    <string name="good_prise">Prise</string>
    <string name="good_city">City</string>
    <string name="good_user_name">User name</string>
    <string name="good_category">Category</string>
    <string name="good_category_description">Category description</string>
    <string name="good_sub_category">Sub category</string>
    <string name="cursor_to_right">-></string>
    <string name="transport_model">Model</string>
    <string name="transport_brand">Brand</string>
    <string-array name="transport_year">
        <item>2022</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
    </string-array>
    <string-array name="transport_fuel">
        <item>Petrol</item>
        <item>Diesel</item>
        <item>Gas/Petrol</item>
        <item>Gas</item>
        <item>Electric car</item>
    </string-array>
    <string name="transport_body">Body</string>
    <string-array name="transport_drive_unit">
        <item>Front</item>
        <item>Rear</item>
        <item>Full</item>
    </string-array>
    <string-array name="transport_color">
        <item>Silvery</item>
        <item>Grey</item>
        <item>Wet asphalt</item>
        <item>Black</item>
        <item>White</item>
        <item>Beige</item>
        <item>Turquoise</item>
        <item>Burgundy</item>
        <item>Bronze</item>
        <item>Cherry</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Golden</item>
        <item>Brown</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Lilac</item>
        <item>Purple</item>
        <item>Chameleon</item>
        <item>Eggplant</item>
    </string-array>
    <string name="transport_registration_reason_code">RRC</string>
    <string name="transport_rudder_position">Rudder position</string>
    <string-array name="transport_condition">
        <item>New</item>
        <item>Ideal</item>
        <item>Good</item>
        <item>Emergency</item>
    </string-array>
    <string-array name="transport_engine_capacity">
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>1.7</item>
        <item>1.8</item>
        <item>1.9</item>
        <item>2.0</item>
        <item>2.1</item>
        <item>2.2</item>
        <item>2.3</item>
        <item>2.4</item>
        <item>2.5</item>
        <item>2.6</item>
        <item>2.7</item>
        <item>2.8</item>
        <item>2.9</item>
        <item>3.0</item>
        <item>3.1</item>
        <item>3.2</item>
        <item>3.3</item>
        <item>3.4</item>
        <item>3.5</item>
        <item>3.6</item>
        <item>3.7</item>
        <item>3.8</item>
        <item>3.9</item>
        <item>4.0</item>
        <item>4.1</item>
        <item>4.2</item>
        <item>4.3</item>
        <item>4.4</item>
        <item>4.5</item>
        <item>4.6</item>
        <item>4.7</item>
        <item>4.8</item>
        <item>4.9</item>
        <item>5.0</item>
        <item>5.1</item>
        <item>5.2</item>
        <item>5.3</item>
        <item>5.4</item>
        <item>5.5</item>
        <item>5.6</item>
        <item>5.7</item>
        <item>5.8</item>
        <item>5.9</item>
        <item>6.0</item>
        <item>6.1</item>
        <item>6.2</item>
        <item>6.3</item>
        <item>6.4</item>
        <item>6.5</item>
        <item>6.6</item>
        <item>6.7</item>
        <item>6.8</item>
        <item>6.9</item>
        <item>7.0</item>
        <item>7.1</item>
        <item>7.2</item>
        <item>7.3</item>
        <item>7.4</item>
        <item>7.5</item>
        <item>7.6</item>
        <item>7.7</item>
        <item>7.8</item>
        <item>7.9</item>
        <item>8.0</item>
        <item>8.1</item>
        <item>8.2</item>
        <item>8.3</item>
        <item>8.4</item>
        <item>8.5</item>
        <item>8.6</item>
        <item>8.7</item>
        <item>8.8</item>
        <item>8.9</item>
        <item>9.0</item>
        <item>9.1</item>
        <item>9.2</item>
        <item>9.3</item>
        <item>9.4</item>
        <item>9.5</item>
        <item>9.6</item>
        <item>9.7</item>
        <item>9.8</item>
        <item>9.9</item>
        <item>10.0</item>
        <item>10.1</item>
        <item>10.2</item>
        <item>10.3</item>
        <item>10.4</item>
        <item>10.5</item>
        <item>10.6</item>
        <item>10.7</item>
        <item>10.8</item>
        <item>10.9</item>
        <item>11.0</item>
        <item>11.1</item>
        <item>11.2</item>
        <item>11.3</item>
        <item>11.4</item>
        <item>11.5</item>
        <item>11.6</item>
        <item>11.7</item>
        <item>11.8</item>
        <item>11.9</item>
        <item>12.0</item>
    </string-array>
    <string name="transport_identical_goods">Identical goods</string>
    <string name="no_offers">NO OFFERS!</string>
    <string name="to_add_an_advert">To add an advert</string>
    <string name="select_a_category">Select a category</string>
    <string name="select_a_subcategory">Select a subcategory</string>
    <string name="additional_information">Additional Information</string>
    <string name="product_title">Product title</string>
    <string name="product_description">Product description</string>
    <string name="photo">Photo</string>
    <string name="only_one_photo">*only one photo</string>
    <string name="price">Price</string>
    <string name="negotiable">Negotiable</string>
    <string name="use_my_number">Use my number</string>
    <string name="add">Add</string>
    <string name="category">Category</string>
    <string name="category_description">Category description</string>
    <string name="list_all_category">List all category</string>
    <string name="right"><![CDATA[>]]></string>
    <string name="similar_ads">Similar ads</string>
    <string name="setting">Settings</string>
    <string name="night_mode">cgv</string>
    <string name="select_language">bv</string>
    <string name="choose_language">vgh</string>
    <string name="language">hj</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="login">LogIn</string>
    <string name="registration">Registration</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="password_minimum_8_characters">Password (minimum 8 characters)</string>
    <string name="confirm_the_password">Confirm the password</string>
    <string name="_996">+996 </string>
    <string name="username">Username</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="phone">Phone</string>
    <string name="_996_phone">+996 ### ## ## ##</string>
    <string name="real_estate">Real estate</string>
    <string-array name="categories">
        <item>TRANSPORT</item>
        <item>REAL ESTATE</item>
        <item>TAXI</item>
        <item>ELECTRONICS</item>
        <item>SERVICES</item>
        <item>WORK</item>
        <item>PERSONAL ITEMS</item>
        <item>ANIMALS</item>
        <item>SPORT AND HOBBIES</item>
        <item>MEDICAL PRODUCTS</item>
        <item>CHILDREN IS WORLD</item>
        <item>GIVE FOR FREE</item>
    </string-array>
    <string-array name="sub_transport_category">
        <item>PASSENGER CAR</item>
        <item>AUTO PARTS AND ACCESSORIES</item>
        <item>MOTORCYCLES AND MOpedES</item>
        <item>MOTOR PARTS AND ACCESSORIES</item>
        <item>CARGO AND AGRICULTURAL TRANSPORT</item>
        <item>SPARE PARTS FOR CARGO AND AGRICULTURAL TRANSPORT</item>
        <item>WATER TRANSPORT</item>
        <item>OTHER TRANSPORT</item>
    </string-array>
    <string-array name="sub_real_estate_category">
        <item>Apartments</item>
        <item>New building</item>
        <item>At home</item>
        <item>Land plots</item>
        <item>Сommercial real estate</item>
        <item>Rooms</item>
        <item>Garages</item>
    </string-array>
    <string-array name="sub_taxi_category">
        <item>City taxi</item>
        <item>Intercity taxi</item>
        <item>Freight transportation</item>
        <item>For celebrations</item>
    </string-array>
    <string-array name="sub_electronics_category">
        <item>Mobile phones and accessories</item>
        <item>Computers, laptops and tablets</item>
        <item>Appliances</item>
        <item>Kitchen appliances</item>
        <item>Video games and console</item>
        <item>TV and video</item>
        <item>Audio</item>
        <item>Auto electronics</item>
        <item>Photo and video camera</item>
    </string-array>
</resources>